--- a/projeto/css/style.css
+++ b/projeto/css/style.css
@@ -13,3 +13,66 @@ body {
         #651F71 99%
     );
 }
+
+
+.content-header {
+    width: 100%; 
+    max-width: 1760px; /* Define a largura máxima */
+    margin: 0 auto; /* Centraliza o conteúdo */
+    padding: 38px 80px; 
+    background: #1D0C20; 
+    display: flex;
+    justify-content: space-between; 
+    align-items: center;
+    flex-wrap: wrap;
+
+.name {
+    color: #68B2F8; 
+    font-size: 35px; 
+    font-family: "Exo 2", sans-serif; 
+    font-weight: 700; 
+    line-height: 52.50px; 
+    word-wrap: break-word;
+}
+
+.navigation {
+    flex: 1 1 0; 
+    align-self: stretch; 
+    justify-content: flex-end; 
+    align-items: center; 
+    gap: 48px; 
+    display: inline-flex;
+}
+
+.buttons {
+    color: #68B2F8; 
+    font-size: 20px; 
+    font-family: "Lato", sans-serif; 
+    font-weight: 500; 
+    line-height: 30px; 
+    word-wrap: break-word;
+}
+
+.button-contact {
+    padding-left: 24px; 
+    padding-right: 24px; 
+    padding-top: 14px; 
+    padding-bottom: 14px; 
+    background: #506EE5; 
+    box-shadow: 0px 1px 2px 
+    rgba(0, 0, 0, 0.05); 
+    border-radius: 8px; 
+    justify-content: center; 
+    align-items: center; 
+    gap: 8px; 
+    display: flex;
+}
+
+.contact-me {
+    color: #1D0C20; 
+    font-size: 16px; 
+    font-family: "Lato", sans-serif; 
+    font-weight: 500; 
+    line-height: 24px; 
+    word-wrap: break-word;
+}
