--- a/projeto/css/style.css
+++ b/projeto/css/style.css
@@ -1,8 +1,14 @@
+* {
+    box-sizing: border-box;
+}
+
 html, body {
     width: 100%;
-    height: 100%;
+   /* height: 100%; */
     margin: 0; /* Remove margens padrão */
     padding: 0; /* Remove preenchimentos padrão */
+    display: flex;
+    flex-direction: column;
 }
 
 body {
@@ -16,8 +22,7 @@ body {
 
 
 .content-header {
-    width: 100%; 
-    max-width: 1760px; /* Define a largura máxima */
+    width: 100%;
     margin: 0 auto; /* Centraliza o conteúdo */
     padding: 38px 80px; 
     background: #1D0C20; 
@@ -115,5 +120,67 @@ body {
 }
 
 .links-about {
-    justify-content: flex-start;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-direction: column;
+    transform: translateX(150%);
 }
+
+.second-section{
+    color: white; 
+    font-size: 40px; 
+    font-family: "Lato", sans-serif; 
+    font-weight: 500; 
+    word-wrap: break-word;
+    margin-top: 100px;
+}
+
+.knowledge {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 100px;
+}
+
+.block {
+    flex: 1 1 calc(33.333% - 40px);
+    width: 451px; 
+    height: 520px; 
+    background: rgba(101, 31, 113, 0.22); 
+    border-radius: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+
+@media (max-width: 1200px) {
+    .block {
+        flex: 1 1 calc(50% - 40px); /* Cada bloco ocupa metade da largura menos o espaçamento */
+    }
+}
+
+@media (max-width: 800px) {
+    .block {
+        flex: 1 1 calc(100% - 40px); /* Cada bloco ocupa toda a largura menos o espaçamento */
+    }
+}
+
+.text-blocks {
+    color: #1D0C20; 
+    font-size: 40px; 
+    font-family: "Exo 2", sans-serif; 
+    font-weight: 500; 
+    word-wrap: break-word;
+    text-align: initial;
+}
+
+
+.abilities {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 100px;
+}
+
