--- a/projeto/css/style.css
+++ b/projeto/css/style.css
@@ -74,7 +74,7 @@ body {
     display: flex;
 }
 
-.contact-me {
+.firstcontact-me {
     color: #1D0C20; 
     font-size: 16px; 
     font-family: "Lato", sans-serif; 
@@ -183,4 +183,127 @@ body {
     justify-content: space-around;
     margin-top: 100px;
 }
+
+ /* temporario */ 
+ .contact-form {
+    width: 100%;
+    background-color: #1d0c20;
+    color: #fff;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.form {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: space-between;
+}
+
+.input {
+    flex: 1 1 calc(50% - 20px);
+    display: flex;
+    flex-direction: column;
+}
+
+.input.full-width {
+    flex: 1 1 100%;
+}
+
+.primeiro-nome {
+    margin-bottom: 8px;
+    font-weight: 500;
+    width: 100%;
+    position: relative;
+    font-size: 16px;
+    line-height: 150%;
+    font-weight: 500;
+    font-family: "Inter",sans-serif;
+    color: #fff;
+    text-align: left;
+    display: inline-block;
+}
+
+.field {
+    padding: 12px;
+    border: 1px solid #e0e0e0;
+    border-radius: 8px;
+    background-color: #fff;
+    color: #1d0c20;
+    font-size: 16px;
+}
+
+.button {
+    padding: 16px 32px;
+    background-color: #506ee5;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    text-align: center;
+    font-size: 20px;
+}
+
+.social-icons-container {
+    display: flex;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+.social-icons {
+    width: 40px;
+    height: 40px;
+}
+
+.headline {
+    font-size: 32px;
+    color: #68b2f8;
+    margin-top: 20px;
+}
+
+.contact-me {
+    width: 100%;
+    position: relative;
+    font-size: 64px;
+    letter-spacing: -0.02em;
+    display: inline-block;
+    font-family: "Montserrat", sans-serif;
+    color: #68b2f8;
+    text-align: left;
+    margin-bottom: 30px;
+}
+
+.contact-info {
+    margin-top: 20px;
+}
+
+.contact-info > div {
+    line-height: 1.5;
+}
+
+/* Responsividade */
+@media (max-width: 768px) {
+    .input {
+        flex: 1 1 100%;
+    }
+
+    .form {
+        gap: 10px;
+    }
+
+    .button {
+        width: 100%;
+        text-align: center;
+    }
+
+    .headline {
+        font-size: 24px;
+    }
+
+    .contact-info {
+        font-size: 16px;
+    }
+}
+
+
 
