--- a/projeto/css/style.css
+++ b/projeto/css/style.css
@@ -113,6 +113,7 @@ body {
 .about {
     margin-top: 100px;
     display: flex;
+
 }
 
 .apresentation {
@@ -307,5 +308,7 @@ body {
     }
 }
 
-
+.about, .block {
+    visibility: hidden;
+}
 
